--- a/css/index_styles.css
+++ b/css/index_styles.css
@@ -859,7 +859,7 @@
 /* Responsive Navigation for Mobile */
 @media screen and (max-width: 768px) {
     .navbar{
-        top: 9%;
+        top: 8.8%;
     }
 
     .nav-container {
@@ -877,7 +877,7 @@
         cursor: pointer;
         position: absolute;
         left: 20px; /* Moves to left */
-        top: 46%;
+        top: 45%;
         transform: translateY(-50%);
         z-index: 1001;
         transition: transform 0.3s ease-in-out;
@@ -885,7 +885,7 @@
 
     .navbar ul {
         position: absolute;
-        top: 41px; 
+        top: 40px; 
         left: 0;
         width: 100%;
         flex-direction: column;
@@ -926,21 +926,12 @@
         /* justify-content: center; */
     }
 
-    .dropdown-menu {
-        position: static;
-        display: none; /* Hidden initially */
-        box-shadow: none;
-    }
-
-    .dropdown-menu.active {
-        display: block;
-    }
 
     .slider-images img {
         width: 100%;
         height: 270px;
         object-fit: cover;
-        flex-shrink: 0;
+/*         flex-shrink: 0; */
     }
 
     /* Full-width Container */
