index_styles.css

--- a/css/index_styles.css
+++ b/css/index_styles.css
@@ -859,7 +859,7 @@
 /* Responsive Navigation for Mobile */
 @media screen and (max-width: 768px) {
     .navbar{
-        top: 7%;
+        position: relative;
     }
 
     .nav-container {
