--- a/css/index_styles.css
+++ b/css/index_styles.css
@@ -32,7 +32,8 @@
 /* Sticky Navigation */
 .navbar {
     position: sticky;
-    top: 18.2%;
+/*     top: 18.2%; */
+    position: relative;
     width: 100%;
     background: linear-gradient(to right, white 2%, rgb(163, 163, 231) 35%, rgb(163, 163, 231) 65%, white 98%);
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
