index_styles.css

--- a/css/index_styles.css
+++ b/css/index_styles.css
@@ -683,7 +683,7 @@
 /* Responsive Navigation for Tablets */
 @media screen and (max-width: 1024px) {
     .navbar{
-        top: 11.1%;
+        position: relative;
     }
     
     .nav-container {
