index_styles.css

--- a/css/index_styles.css
+++ b/css/index_styles.css
@@ -27,7 +27,7 @@
             white 80%,            
             rgb(148, 148, 212) 98%);
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-    padding: 10px 0;
+/*     padding: 10px 0; */
 }
 
 /* Navigation Bar */
@@ -66,7 +66,7 @@
     color: rgb(51, 51, 122);
     font-size: 18px;
     font-weight: bold;
-    padding: 10px 15px;
+    padding: 5px 10px;
     transition: all 0.3s ease-in-out;
     display: block;
 }
@@ -491,7 +491,7 @@
 .quick-links-list {
     list-style: none; /* Remove default bullets */
     padding: 0;
-    margin-top: 10px;
+    margin-top: 5px;
 }
 
 .quick-links-list li {
