--- a/css/student_login_styles.css
+++ b/css/student_login_styles.css
@@ -287,6 +287,7 @@ body {
     .login-container input {
         padding: 8px; /* Reduced padding for mobile phones */
         font-size: 12px; /* Smaller font size for mobile phones */
+        width: 80%;
     }
 
     .login-container button {
