--- a/css/student_login_styles.css
+++ b/css/student_login_styles.css
@@ -8,6 +8,7 @@ body {
     rgb(216, 198, 198) ,          
     rgb(148, 148, 212)   /* Dark blue appears only at the right edge */
 );
+    box-sizing: border-box;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -140,7 +141,7 @@ body {
 }
 
 .login-container input {
-    width: 80%;
+    width: 100%;
     padding: 12px;
     margin-bottom: 10px;
     border: 2px solid #ddd;
