student_login_styles.css

--- a/css/student_login_styles.css
+++ b/css/student_login_styles.css
@@ -279,6 +279,7 @@ body {
 
     .login-container {
         padding: 15px; /* Reduced padding for mobile phones */
+        top:100px;
     }
 
     .login-container h1 {
@@ -297,5 +298,6 @@ body {
 
     .top-image {
         height: 60px; /* Smaller image for mobile phones */
+        width:300px;
     }
 }
